2011-11-09  Marco Rovere  <marco.rovere@cern.ch>

	* getLumiLoss.py, lumi_web.py, analoss.py, runregparse.py: Initial
	cmmit into CVS repository.

